assets/main.css
/* ----------
Base
---------- */
body {
  display: flex;
  align-items: center;
  display: -webkit-box;
  -webkit-box-align: center;
  font-family: 'Frank Ruhl Libre', sans-serif;
}


/* ----------
Links
---------- */
a:focus {
  outline: thin dotted;
}
a:active, a:hover {
  outline: 0;
}
.site-main-link, .site-main-link:active, .site-main-link:hover, .site-main-link:visited, .site-main-link:focus {
  position: absolute;
  outline: 0;
  color: black;
  text-decoration: none;
}
.my-links-list {
  font-size: 16px;
  display: inline;
  list-style: none;
}
.my-links-item {
  display: inline;
  padding-left: .5em;
  padding-right: .5em;
}
@media (min-width: 550px) {
  .my-links-item {
    padding-left: 1em;
    padding-right: 1em;
  }
}
.my-link {
  color: #000000;
}
.my-link:visited {
  color: #363636;
}

/* ----------
Typography
---------- */
.header-block {
  padding-top: 2em;
}
.footer-block {
  position: relative;
  left: 15%;
  width: 70%;
  text-align: center;
}
.content-wrapper {
  padding-left: 2em;
  padding-right: 2em;
  text-align: left;
}
.post-wrapper {
  font-family: 'Inconsolata', monospace;
}
.post-title {
  font-family: 'Frank Ruhl Libre', sans-serif;
}
.bio-body {
  position: relative;
  left: 10%;
  width: 80%;
  padding-top: 1em;
}
.index-list {
  padding-left: 2em;
  display: block;
  list-style: circle;
}
.post-content {
  position: relative;
  width: 90%;
  left: 5%;
  padding-top: 1em;
}
.full-width {
  position: relative;
  width: 100%;
  left: 0%;
}

/* ----------
Images
---------- */

.site-main-icon {
  height: 50px;
  position: relative;
  padding-right: -25px;
  padding-left: -25px;
  padding-bottom: -25px;
}

.full-width-img {
  position: relative;
  left: 0%;
  width: 100%;
  height: auto;
}

.two-third-width-img {
  position: relative;
  left: 16.7%;
  width: 66.6%;
  height: auto;
}

.half-width-img {
  position: relative;
  left: 25%;
  width: 50%;
  height: auto;
}

.third-width-img {
  position: relative;
  left: 33.3%;
  width: 33.3%;
  height: auto;
}

/* ----------
Colors
---------- */

.resume:hover{
  color: #da291c;
}
.twitter:hover{
  color: #1da0f2;
}
.linkedin:hover{
  color: #0077b5;
}
.github:hover{
  color: #999;
}
.envelope:hover{
  color: #ea8462;
}

